[package]
name = "leptos-obfuscate"
version = "0.2.0"
edition = "2021"
rust-version = "1.75.0"
license = "MIT"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org"]
categories = ["wasm", "web-programming"]
keywords = ["leptos", "wasm", "web"]
description = "Simple email obfuscation component for Leptos"
readme = "README.md"
repository = "https://github.com/sebadob/leptos-obfuscate"

[dependencies]
leptos = { version = "0.6.5", features = [] }
