[package]
name = "leptos-obfuscate"
version = "0.4.0"
edition = "2021"
rust-version = "1.76.0"
license = "MIT"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org"]
categories = ["wasm", "web-programming"]
keywords = ["leptos", "wasm", "web"]
description = "Simple email obfuscation component for Leptos"
readme = "README.md"
repository = "https://github.com/sebadob/leptos-obfuscate"

[dependencies]
leptos = { version = "0.7", features = [] }
